Add pics to ride cards

--- a/index.html
+++ b/index.html
@@ -15,63 +15,93 @@
         
         <main class="rides-grid">
             <a href="rides/odyssey.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Odyssey</h2>
-                <p class="wait-time">Wait: 45 min</p>
+                <img src="images/odyssey-card.jpg" alt="Odyssey" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Odyssey</h2>
+                    <p class="wait-time">Wait: 45 min</p>
+                </div>
             </a>
 
             <a href="rides/millennium.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Millennium</h2>
-                <p class="wait-time">Wait: 30 min</p>
+                <img src="images/millennium-card.jpg" alt="Millennium" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Millennium</h2>
+                    <p class="wait-time">Wait: 30 min</p>
+                </div>
             </a>
 
             <a href="rides/magic.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Magic</h2>
-                <p class="wait-time">Wait: 20 min</p>
+                <img src="images/magic-card.jpg" alt="Magic" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Magic</h2>
+                    <p class="wait-time">Wait: 20 min</p>
+                </div>
             </a>
 
             <a href="rides/volcano.html" class="ride-card">
-                <div class="status-badge maintenance">Maintenance</div>
-                <h2>The Volcano</h2>
-                <p class="wait-time">Temporarily Closed</p>
+                <img src="images/volcano-card.jpg" alt="The Volcano" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge maintenance">Maintenance</div>
+                    <h2>The Volcano</h2>
+                    <p class="wait-time">Temporarily Closed</p>
+                </div>
             </a>
 
             <a href="rides/spinning-coaster.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Spinning Coaster</h2>
-                <p class="wait-time">Wait: 15 min</p>
+                <img src="images/spinning-coaster-card.jpg" alt="Spinning Coaster" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Spinning Coaster</h2>
+                    <p class="wait-time">Wait: 15 min</p>
+                </div>
             </a>
 
             <a href="rides/magical-seaquarium.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Magical Seaquarium</h2>
-                <p class="wait-time">Wait: 10 min</p>
+                <img src="images/magical-seaquarium-card.jpg" alt="Magical Seaquarium" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Magical Seaquarium</h2>
+                    <p class="wait-time">Wait: 10 min</p>
+                </div>
             </a>
 
             <a href="rides/rhombus-rocket.html" class="ride-card">
-                <div class="status-badge closed">Closed</div>
-                <h2>Rhombus Rocket</h2>
-                <p class="wait-time">Closed for Weather</p>
+                <img src="images/rhombus-rocket-card.jpg" alt="Rhombus Rocket" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge closed">Closed</div>
+                    <h2>Rhombus Rocket</h2>
+                    <p class="wait-time">Closed for Weather</p>
+                </div>
             </a>
 
             <a href="rides/firebowl.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Firebowl</h2>
-                <p class="wait-time">Wait: 25 min</p>
+                <img src="images/firebowl-card.jpg" alt="Firebowl" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Firebowl</h2>
+                    <p class="wait-time">Wait: 25 min</p>
+                </div>
             </a>
 
             <a href="rides/starflyer.html" class="ride-card">
-                <div class="status-badge open">Open</div>
-                <h2>Starflyer</h2>
-                <p class="wait-time">Wait: 20 min</p>
+                <img src="images/starflyer-card.jpg" alt="Starflyer" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge open">Open</div>
+                    <h2>Starflyer</h2>
+                    <p class="wait-time">Wait: 20 min</p>
+                </div>
             </a>
 
             <a href="rides/wild-river-rapids.html" class="ride-card">
-                <div class="status-badge closed">Closed</div>
-                <h2>Wild River Rapids</h2>
-                <p class="wait-time">Seasonal Closure</p>
+                <img src="images/wild-river-rapids-card.jpg" alt="Wild River Rapids" class="ride-card-image">
+                <div class="ride-card-content">
+                    <div class="status-badge closed">Closed</div>
+                    <h2>Wild River Rapids</h2>
+                    <p class="wait-time">Seasonal Closure</p>
+                </div>
             </a>
         </main>
     </div>
