Remove API usage

--- a/rides/magic.html
+++ b/rides/magic.html
@@ -302,7 +302,7 @@
 
 
 
-                <img src="../images/magic.jpg" alt="Magic Ride">
+                <img src="../images/magic.jpg" alt="Magic">
 
 
 
@@ -454,23 +454,7 @@
 
 
 
-
-
-
-
-
-
-
-
                     <h3>Price</h3>
-
-
-
-
-
-
-
-
 
 
 
@@ -670,7 +654,7 @@
 
 
 
-                <p>Magic is the only operating HUSS Magic ride in the UK. This unique attraction features four arms with rotating hubs, each holding three individually spinning cars. Each car seats four passengers and is secured by lap bars. The ride delivers an exciting and unpredictable experience as the arms raise and lower while the cars spin independently.</p>
+                <p>Step into a world of magic and wonder!</p>
 
 
 
